I am back to the work! Refactored everything